--- a/_posts/2018-04-27-Go-1.10-Plugin的bug.md
+++ b/_posts/2018-04-27-Go-1.10-Plugin的bug.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      Go Plugs
+title:      Go1.10 Plugin的bug
 subtitle:   
 date:       2018-04-27
 author:     Edward.Yang
